--- a/ürünlerimiz.html
+++ b/ürünlerimiz.html
@@ -31,11 +31,12 @@
     <div class="container">
         <div class="row">
             <div class="col-4">
-                <div class="card" style=" margin-top: 100px; ">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/PSP-3000-Silver.png" class="card-img-top img" alt="..." width="100" height="150" >
+                <div class="card" style=" margin-top: 100px; height: 420px; ">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/PSP-3000-Silver.png" class="card-img-top img" alt="..." width="100" height="150"   >
                     <div class="card-body">
-                      <h5 class="card-title text-info">Sony PSP-3004</h5>
+                      <h5 class="card-title text-dark text-monospace font-weight-bold text-monospace font-weight-bold " style="font-size: x-large;">SONY PSP-3004</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text text-right font-weight-bolder">3.990 TL</p>
                       <a href="#" class="btn btn-primary">Satın Al!</a>
                     </div>
                   </div>
@@ -43,11 +44,13 @@
 
 
             <div class="col-4">
-                <div class="card" style=" margin-top: 100px;">
-                    <img src="https://i.pinimg.com/originals/96/14/04/961404bc5bba88934794003a3c3c24ff.png" class="card-img-top img" alt="..." width="100" height="150" >
+                <div class="card" style=" margin-top: 100px; height: 420px;">
+                    <img src="https://i.pinimg.com/originals/96/14/04/961404bc5bba88934794003a3c3c24ff.png" class="card-img-top img" alt="..." width="100" height="150"  >
                     <div class="card-body">
-                      <h5 class="card-title text-info">GAMEBOY ADVANCE SP</h5>
+                      <h5 class="card-title text-dark text-monospace font-weight-bold " style="font-size: x-large;" >GAMEBOY ADVANCE SP</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text text-right font-weight-bolder">2.490 TL</p>
+                      
                       <a href="#" class="btn btn-primary">Satın Al!</a>
                     </div>
                   </div>
@@ -55,10 +58,11 @@
 
             <div class="col-4">
                 <div class="card" style=" margin-top: 100px;">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a1/New_Nintendo_3DS.png" class="card-img-top img " alt="..." width="100"  height="150" >
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a1/New_Nintendo_3DS.png" class="card-img-top img " alt="..." width="100"  height="150"  >
                     <div class="card-body">
-                      <h5 class="card-title text-info">NINTENDO 3DS</h5>
+                      <h5 class="card-title text-dark text-monospace font-weight-bold" style="font-size: x-large;">NINTENDO 3DS</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text text-right font-weight-bolder">1.999 TL</p>
                       <a href="#" class="btn btn-primary">Satın Al!</a>
                     </div>
                   </div>
@@ -67,10 +71,11 @@
         <div class="row">
             <div class="col-4">
                 <div class="card" style=" margin-top: 100px;">
-                    <img src="https://www.nicepng.com/png/full/414-4140489_ps-vita-slim-repair-ps-vita-2016.png" class="card-img-top img" alt="..." width="100" height="150" >
+                    <img src="https://www.nicepng.com/png/full/414-4140489_ps-vita-slim-repair-ps-vita-2016.png" class="card-img-top img" alt="..." width="100" height="150"  >
                     <div class="card-body">
-                      <h5 class="card-title text-info"> SONY PS VITA</h5>
+                      <h5 class="card-title text-dark text-monospace font-weight-bold" style="font-size: x-large;"> SONY PS VITA</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text text-right font-weight-bolder">3.490 TL</p>
                       <a href="#" class="btn btn-primary">Satın Al!</a>
                     </div>
                   </div>
@@ -79,10 +84,11 @@
 
             <div class="col-4">
                 <div class="card" style=" margin-top: 100px;">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/27/Game-Boy-Micro.png" class="card-img-top img" alt="..." width="100" height="150" >
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/27/Game-Boy-Micro.png" class="card-img-top img" alt="..." width="100" height="150"  >
                     <div class="card-body">
-                      <h5 class="card-title text-info">GAMEBOY MICRO</h5>
+                      <h5 class="card-title text-dark text-monospace font-weight-bold" style="font-size: x-large;">GAMEBOY MICRO</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text text-right font-weight-bolder">5.990 TL</p>
                       <a href="#" class="btn btn-primary">Satın Al!</a>
                     </div>
                   </div>
@@ -90,10 +96,11 @@
 
             <div class="col-4">
                 <div class="card" style=" margin-top: 100px;">
-                    <img src="https://cdn.cloudflare.steamstatic.com/steamdeck/images/press/renderings/rendering07.png" class="card-img-top img " alt="..." width="100"  height="150" >
+                    <img src="https://cdn.cloudflare.steamstatic.com/steamdeck/images/press/renderings/rendering07.png" class="card-img-top img " alt="..." width="100"  height="150"  >
                     <div class="card-body">
-                      <h5 class="card-title text-info">STEAM DECK EL KONSOLU</h5>
+                      <h5 class="card-title text-dark text-monospace font-weight-bold" style="font-size: x-large;">STEAM DECK EL KONSOLU</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text text-right font-weight-bolder">18.590 TL</p>
                       <a href="#" class="btn btn-primary">Satın Al!</a>
                     </div>
                   </div>
