--- a/anasayfa.html
+++ b/anasayfa.html
@@ -11,6 +11,8 @@
     
   </head>
   <body style="background-color: #E9ECEF;" >
+
+    <!-- Header-->
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
       <a class="navbar-brand text-danger " href="anasayfa.html">KONSOLCUM</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,6 +28,8 @@
         </div>
       </div>
     </nav>
+
+    <!-- Article-->
 
     <div class="jumbotron" style="text-align: center;">
       <h1 class="display-4 text-danger " style="font-weight: 400;">Selam, Oyuncu!</h1>
