--- a/ürünlerimiz.html
+++ b/ürünlerimiz.html
@@ -12,6 +12,8 @@
     
   </head>
   <body style="background-color: #E9ECEF;" >
+
+    <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
       <a class="navbar-brand text-danger " href="anasayfa.html">KONSOLCUM</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,6 +29,8 @@
         </div>
       </div>
     </nav>
+
+    <!-- Article-->
     <h1 class="display-4 text-danger " style="font-weight: 400; text-align: center; margin-top: 70px;">Ürünlerimiz!</h1>
     <div class="container">
         <div class="row">
